[project]
name = "latent-transform-sampler"
description = "Advanced latent space transformations during diffusion sampling with precise control over timing and distribution"
version = "1.0.2"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.19.0"
]

[project.urls]
Repository = "https://github.com/pizurny/Comfyui-Latent-Transform-Sampler"
"Bug Tracker" = "https://github.com/pizurny/Comfyui-Latent-Transform-Sampler/issues"

[tool.comfy]
PublisherId = "pizurny"
DisplayName = "Latent Transform Sampler"
Icon = ""
